Opened 7 years ago
Closed 7 years ago
#10019 closed bug (fixed)
[Haiku PM] Background - "Icon label outline" doesn't work
Reported by: | Giova84 | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Backgrounds | Version: | R1/Package Management |
Keywords: | Haiku PM Background Icon label outline doesn't work | Cc: | |
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
As described in the subject, in Haiku PM, selecting "Icon label outline" inside "Background" window, does nothing, doesn't work.
Note:
See TracTickets
for help on using tickets.
On newer nightlies revisions, this feature seems to work again here. So this ticket can be closed.