Icon outline setting was ignored if no background image found

Might have been the cause behind #10019.